Some bugfix and improve layout

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -65,7 +65,7 @@
           </div>
             <div class="center-div">
               <img src="img/logo.png" width="200" height="150" />
-                <h5>Subca la Buca App</h5>
+                <h5>Sbuca la Buca App</h5>
                 <div id="deviceready" class="blink">
                     <p class="event listening">Connecting to Device</p>
                     <p class="event received">Device is Ready</p>
