--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -65,7 +65,7 @@
           </div>
             <div class="center-div">
               <img src="img/logo.png" width="200" height="150" />
-                <h5>Subca la Buca App</h5>
+                <h5>Sbuca la Buca App</h5>
                 <div id="deviceready" class="blink">
                     <p class="event listening">Connecting to Device</p>
                     <p class="event received">Device is Ready</p>
@@ -97,8 +97,10 @@
                </div>
              </div>
           </div>
-            <div class="pictures">
-              <p><img id="originalPicture" src="" width="400"/></p>
+            <div class="pictures row">
+              <div class="col s12">
+                <img id="originalPicture" src="" class="responsive-img"/>
+              </div>
             </div>
           </div>
           <div data-role="footer" data-position="fixed" data-tap-toggle="false" class="footer" id="footerCamera">
