--- a/website/public/index.html
+++ b/website/public/index.html
@@ -12,11 +12,11 @@
       <h1>Benvenuti a Sbuca la Buca</h1>
       <p>Questa è la mappa della nostra straodinaria applicazione, meravigliatevi con la geolocalizzazione!</p>
       <ul>
-        <li><a target="_blank" href="http://www.lochiva.com/app/bin/sbuca.apk">Scarica l'applicazione</a></li>
+        <li><a target="_blank" href="bin/sbuca.apk">Scarica l'applicazione</a></li>
       </ul>
       <div class="row container-iamges">
       </div>
-      <div id="map" class="" style="position: relative; overflow: hidden; width:100%;height:650px" >
+      <div id="map" class="" style="position: relative; overflow: hidden; width:100%;height:700px" >
       </div>
 
     </div>
