--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -29,7 +29,7 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; media-src * 'self' data: gap: blob: ; img-src * 'self' data: gap: ;">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.firebase.com https://*.firebaseio.com;  media-src * 'self' data: gap: blob: ; img-src * 'self' data: gap: ;">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -165,11 +165,11 @@
         </div>
     </div>
     <div data-role="page" id="gallery">
-      <div data-role="header">
-      <h1 style="font-weight:800;">Galleria</h1>
-          <a href="#info" data-transition="flip" class="ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-back">
+        <div data-role="header">
+            <h1 style="font-weight:800;">Galleria</h1>
+            <a href="#info" data-transition="flip" class="ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-back">
         Torna indietro</a>
-      </div>
+        </div>
         <div data-role="main" class="ui-content">
             <div class="custom-spinner">
                 <div class="preloader-wrapper big active ">
@@ -191,10 +191,12 @@
         </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/jquery2.1.4.js"></script>
+    <script type="text/javascript" src="js/assets/jquery2.1.4.js"></script>
     <script type="text/javascript" src="js/jquerymobile1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/firebase.js"></script>
+    <script type="text/javascript" src="js/assets/materialize.min.js"></script>
+    <script type="text/javascript" src="js/assets/firebase.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 
