--- a/website2/public/index.html
+++ b/website2/public/index.html
@@ -20,9 +20,21 @@
       </div>
 
     </div>
+    <div id="modal-image" class="modal modal-fixed-footer">
+    <div class="modal-content">
+      <div class="row">
+        <div class="col s12">
+          <img id="modal-img" src="" class="responsive-img"/>
+        </div>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button class="modal-action modal-close waves-effect waves-green btn btn-flat ">Chiudi</button>
+    </div>
+  </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUVo6Vwd6EgJdMuuBmg9kRPc0TaoMx4z0&libraries=geometry"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQRGGpSnZPgJBYhC1UaEfjXAJ6BUCuBBQ&libraries=geometry"></script>
     <script type="text/javascript" src="js/firebase.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
