Improve performance and built signed apk

--- a/website2/public/index.html
+++ b/website2/public/index.html
@@ -12,7 +12,7 @@
       <h1>Benvenuti a Sbuca la Buca</h1>
       <p>Questa è la mappa della nostra straodinaria applicazione, meravigliatevi con la geolocalizzazione!</p>
       <ul>
-        <li><a target="_blank" href="bin/sbuca.apk">Scarica l'applicazione</a></li>
+        <li><a target="_blank" href="bin/sbuca.apk">Scarica l'applicazione Android</a></li>
       </ul>
       <div class="row container-iamges">
       </div>
