--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -182,8 +182,8 @@
     <script type="text/javascript" src="js/assets/firebase.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
-    <!--<script type="text/javascript" src="js/map.js"></script>-->
-    <script type="text/javascript" src="js/myindex.js"></script>
+    <script type="text/javascript" src="js/map.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
