Some bug fix and improvment

--- a/website2/public/index.html
+++ b/website2/public/index.html
@@ -10,9 +10,9 @@
   <body>
     <div id="message">
       <h1>Benvenuti a Sbuca la Buca</h1>
-      <p>Questa è la mappa della nostra straodinaria applicazione, meravigliatevi con la geolocalizzazione!</p>
+      <p style="text-align:center;">Questa è la mappa della nostra straodinaria applicazione, meravigliatevi con la geolocalizzazione!</p>
       <ul>
-        <li><a target="_blank" href="bin/sbuca.apk">Scarica l'applicazione Android</a></li>
+        <li><a class="yellow darken-3" target="_blank" href="bin/sbuca.apk">Scarica l'applicazione Android</a></li>
       </ul>
       <div class="row container-iamges">
       </div>
@@ -36,6 +36,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQRGGpSnZPgJBYhC1UaEfjXAJ6BUCuBBQ&libraries=geometry"></script>
     <script type="text/javascript" src="js/firebase.js"></script>
+    <script type="text/javascript" src="js/markerclusterer.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
