--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -180,9 +180,11 @@
     <script type="text/javascript" src="js/jquerymobile1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script type="text/javascript" src="js/assets/materialize.min.js"></script>
     <script type="text/javascript" src="js/assets/firebase.js"></script>
+    <script type="text/javascript" src="js/assets/markerclusterer.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 
