Bug fix, improvments

--- a/website2/public/index.html
+++ b/website2/public/index.html
@@ -12,7 +12,10 @@
       <h1>Benvenuti a Sbuca la Buca</h1>
       <p style="text-align:center;">Questa è la mappa della nostra straodinaria applicazione, meravigliatevi con la geolocalizzazione!</p>
       <ul>
-        <li><a class="yellow darken-3" target="_blank" href="https://play.google.com/store/apps/details?id=com.itoa.sbuca&ah=CxYGFpuGnGKytr8rH5qDpImNFfE&hl=it">Scarica l'applicazione Android</a></li>
+        <li><a class="yellow darken-3" target="_blank" href="https://play.google.com/store/apps/details?id=com.itoa.sbuca&ah=CxYGFpuGnGKytr8rH5qDpImNFfE&hl=it">Scarica l'applicazione per Android</a></li>
+      </ul>
+      <ul>
+        <li><a class="yellow darken-3" target="_blank" href="bin/Sbuca.ipa">Scarica l'applicazione per IOS</a></li>
       </ul>
       <div class="row container-iamges">
       </div>
