Added parse functions

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -165,7 +165,7 @@
             </div>
         </div>
         <div data-role="main" class="ui-content">
-            <div class="center-div">
+            <div class="row center-align" style="margin-top:30px;">
               <div id="info-text">
                   <h4>Info:</h4>
                   <h6>Lettura info non riuscita!</h6>
@@ -175,17 +175,25 @@
             </div>
         </div>
     </div>
+    <!-- ASSETS SCRIPTS-->
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/assets/jquery2.1.4.js"></script>
     <script type="text/javascript" src="js/jquerymobile1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script type="text/javascript" src="js/assets/materialize.min.js"></script>
     <script type="text/javascript" src="js/assets/firebase.js"></script>
+    <script type="text/javascript" src="js/assets/parse.min.js"></script>
     <script type="text/javascript" src="js/assets/markerclusterer.js"></script>
+    <script type="text/javascript" src="js/assets/sha256.js"></script>
+    <!-- APPLICATION SCRIPTS -->
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
+    <script type="text/javascript" src="js/firebaseFunctions.js"></script>
+    <script type="text/javascript" src="js/parseFunctions.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <!-- RELEASE MINIFIED SCRIPT -->
+    <!--<script type="text/javascript" src="js/release.js"></script>-->
 </body>
 
 </html>
