--- a/www/index.html
+++ b/www/index.html
@@ -183,6 +183,7 @@
     <script type="text/javascript" src="js/assets/firebase.js"></script>
     <script type="text/javascript" src="js/assets/parse.min.js"></script>
     <script type="text/javascript" src="js/assets/markerclusterer.js"></script>
+    <script type="text/javascript" src="js/assets/sha256.js"></script>
     <!-- APPLICATION SCRIPTS -->
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
