--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
       </div>
   </div>
     <div data-role="page" id="home">
-        <div data-role="header">
+        <header data-role="header" class="header">
             <div data-role="navbar">
                 <ul>
                     <li><a href="#home" data-icon="home" class="ui-btn-active ui-state-persist" data-transition="slide">Home</a></li>
@@ -66,7 +66,7 @@
                     <li><a href="#info" data-icon="info" data-transition="slide">Info</a></li>
                 </ul>
             </div>
-        </div>
+        </header>
         <div data-role="main" class="ui-content">
             <div class="row">
               <div class="col s12">
@@ -96,7 +96,7 @@
         </div>
     </div>
     <div data-role="page" id="camera">
-        <div data-role="header" id="headerCamera">
+        <header data-role="header" id="headerCamera" class="header">
             <div data-role="navbar">
                 <ul>
                     <li><a href="#home" data-icon="home" data-transition="slide" data-direction="reverse">Home</a></li>
@@ -105,7 +105,7 @@
                     <li><a href="#info" data-icon="info" data-transition="slide">Info</a></li>
                 </ul>
             </div>
-        </div>
+        </header>
         <div data-role="main" class="ui-content">
             <div class="pictures row">
                 <div class="col s12">
@@ -132,7 +132,7 @@
         </div>
     </div>
     <div data-role="page" id="gallery">
-      <div data-role="header">
+      <header data-role="header" class="header">
           <div data-role="navbar">
               <ul>
                   <li><a href="#home" data-icon="home" data-transition="slide" data-direction="reverse">Home</a></li>
@@ -141,7 +141,7 @@
                   <li><a href="#info" data-icon="info" data-transition="slide">Info</a></li>
               </ul>
           </div>
-      </div>
+      </header>
         <div data-role="main" class="ui-content">
           <div class="row">
             <div class="col s12">
@@ -154,7 +154,7 @@
         </div>
     </div>
     <div data-role="page" id="info">
-        <div data-role="header">
+        <header data-role="header" class="header">
             <div data-role="navbar">
                 <ul>
                     <li><a href="#home" data-icon="home" data-transition="slide" data-direction="reverse">Home</a></li>
@@ -163,7 +163,7 @@
                     <li><a href="#info" data-icon="info" class="ui-btn-active ui-state-persist" data-transition="slide">Info</a></li>
                 </ul>
             </div>
-        </div>
+        </header>
         <div data-role="main" class="ui-content">
             <div class="row center-align" style="margin-top:30px;">
               <div id="info-text">
