Nuova versione e bug fix

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -82,24 +82,61 @@
         </header>
         <div data-role="main" class="ui-content">
             <div class="row">
-              <div class="input-field col s12 showIfParse custom-margin"  style="display:none;" data-role="none">
-                <select  id="album-map" class="browser-default album-list groupsname"  data-role="none">
-                 <option data-role="none" value="" selected>Seleziona un album da mostrare</option>
-               </select>
+              <div class="row app-title page-title" >
+                <div class="col s12">
+                  <h5 class="center showIfFirebase"><b>Sbuca la Buca</b></h5>
+                  <h6 class="center showIfParse" style="display: none;"><b>Stai usando un istanza privata</b></h6>
+                  <p>Segnala le <b>buche</b> scattando una <b>foto</b></p>
+                </div>
               </div>
-              <div class="col s12">
-                <h5 class="center app-title showIfFirebase">Sbuca la Buca App</h5>
-                  <div id="map" class="" style="position: relative; overflow: hidden; width:100%;height:500px;" >
+              <div class="row filtri-map">
+                <div class="col s6">
+                  <h6 class="text-left"><b>FOTO PUBBLICHE</b></h6>
+                </div>
+                <div class="col s6 ">
+                  <a id="filtri" class="waves-effect yellow darken-3 btn white-text" href="#modal-filtri"><i class="fa fa-sliders"></i> filtri </a>
+                  <!-- Modal Structure -->
+                  <div id="modal-filtri" class="modal">
+                    <div class="modal-content">
+                    <i class="modal-action modal-close material-icons right">clear</i>
+                      <h5><i class="fa fa-sliders"></i> <b>FILTRI</b></h5>
+
+                      <div class="switch" data-role="none">
+                        <label data-role="none">
+
+                          <input class="filter-map disableBy-today" type="checkbox" data-role="none" value="user">
+                          <span class="lever" data-role="none"></span>
+                          Solo i <b>miei</b> scatti
+                        </label>
+                      </div>
+                      <div class="switch" data-role="none">
+                        <label data-role="none">
+
+                          <input class="filter-map disableBy-user"  type="checkbox" data-role="none" value="today">
+                          <span class="lever" data-role="none"></span>
+                          Solo gli scatti di <b>oggi</b>
+                        </label>
+                      </div>
+                      <div class="input-field showIfParse"  style="display: none;" data-role="none">
+                        <select  id="album-map" class="browser-default album-list groupsname"  data-role="none">
+                         <option data-role="none" value="" disabled selected>Seleziona un album</option>
+                       </select>
+                      </div>
+
+                    </div>
+
                   </div>
+
+                </div>
               </div>
-                <!--<img src="img/logo.png" width="200" height="150" />
-                <h5>Sbuca la Buca App</h5>
-                <div id="deviceready" class="blink">
-                    <p class="event listening">Connecting to Device</p>
-                    <p class="event received">Device is Ready</p>
-                </div>-->
+              <div class="row">
+                <div class="col s12">
+                    <div id="map" class="" style="position: relative; overflow: hidden; width:100%;height:500px;" >
+                    </div>
+                </div>
+              </div>
             </div>
-            <div id="modal-image" class="modal modal-fixed-footer">
+            <div id="modal-image" class="modal modal-large modal-fixed-footer">
             <div class="modal-content modal-content-img">
               <div class="row" style="height:100%;">
                 <div class="col s12 center-align" style="height:100%;">
@@ -137,7 +174,7 @@
             <a id="openModal" class="waves-effect waves-light btn ">
                 <i class="material-icons icon-size-custom">send</i></a>
         </div>
-        <div id="modalInvio" class="modal modal-fixed-footer">
+        <div id="modalInvio" class="modal modal-large modal-fixed-footer">
             <div class="modal-content" data-role="none">
                 <div class="col s12 right-align"><i id="closeModal" class="modal-action modal-close material-icons">clear</i></div>
                 <div class="input-field col s12" data-role="none">
@@ -167,19 +204,23 @@
           </div>
       </header>
         <div data-role="main" class="ui-content">
-          <div class="row">
-            <div class="col s12">
-              <h5 class="center app-title">Gallery</h5>
+          <div class="page-title">
+            <div class="row">
+              <div class="col s12 ">
+                <h5 class="center app-title">Gallery</h5>
+              </div>
+              <div class="input-field col s12 showIfParse custom-margin"  style="display:none;" data-role="none">
+                <select  id="album-gallery" class="browser-default album-list groupsname"  data-role="none">
+                 <option data-role="none" value="" selected>Seleziona un album da mostrare</option>
+               </select>
+              </div>
             </div>
-            <div class="input-field col s12 showIfParse custom-margin"  style="display:none;" data-role="none">
-              <select  id="album-gallery" class="browser-default album-list groupsname"  data-role="none">
-               <option data-role="none" value="" selected>Seleziona un album da mostrare</option>
-             </select>
+            <div id="image-container" class="row">
+              <div class="col s12 ">
+                <p class="center-align">Non ci sono <b>immagini</b> presenti in galleria!</p>
+              </div>
             </div>
           </div>
-            <div id="image-container" class="row">
-              <h6 class="center-align">Non ci sono immagini presenti in galleria!</h6>
-            </div>
         </div>
     </div>
     <div data-role="page" id="info">
@@ -194,13 +235,13 @@
             </div>
         </header>
         <div data-role="main" class="ui-content">
-            <div class="row center-align" style="margin-top:30px;">
-              <div class="showIfParse" style="display:none;">
-                <h4>Stai usando un istanza privata!</h4>
+            <div class="row center-align page-title">
+              <div class="showIfParse col s12" style="display:none;">
+                <h5 class="center">Stai usando un istanza privata!</h5>
               </div>
-              <div class="showIfFirebase" id="info-text">
-                  <h4>Info:</h4>
-                  <h6>Lettura info non riuscita!</h6>
+              <div class="showIfFirebase col s12" id="info-text">
+                  <h5 class="center">Info su <b>Sbuca la Buca</b> App</h5>
+                  <p>Lettura <b>info</b> non riuscita!</p>
               </div>
                 <button id="getPosition">Posizione corrente</button>
                 <button class="showIfFirebase" id="getLogin" >Login Istanza Privata</button>
